--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
     </div>
     </form>
   </div>
+  <footer id="footer-section" class="text-center text-light py-5 bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Rag Day</h2>
+          <p>Copyright &copy; 2024</p>
+          <span>Designed By:<a class="ml-2 text-warning" href="https://www.facebook.com/sohanParves9"
+              target="_blank">Sohan Parves</a>   &amp;<a class="ml-2 text-warning" href="https://www.facebook.com/profile.php?id=100089098226041&mibextid=ZbWKwL"
+              target="_blank">MD Rahat Ahamed</a></span>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
