--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
     <div>
       <label for="select">
-       Section :
+       Department :
       </label>
-      <select name="select" id="select" required>
+      <select name="Department" id="select" required>
         <option value="Select" hidden>Select</option>
         <option value="Science-A">Science-A</option>
         <option value="Science-B">Science-B</option>
