--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        Department :
       </label>
       <select name="Department" id="select" required>
-        <option value="Select" hidden>Select</option>
+        <option value="" hidden>Select</option>
         <option value="Science-A">Science-A</option>
         <option value="Science-B">Science-B</option>
         <option value="Science-C">Science-C</option>
@@ -57,7 +57,7 @@
        T-shirt Size :
       </label>
       <select name="select-t" id="select-t" required>
-        <option value="Select" hidden>Select</option>
+        <option value="" hidden>Select</option>
         <option value="S">S</option>
         <option value="M">M</option>
         <option value="L">L</option>
@@ -71,7 +71,7 @@
        Polo-shirt Size :
       </label>
       <select name="select-p" id="select-p">
-        <option value="Select" hidden required>Select</option>
+        <option value="" hidden required>Select</option>
         <option value="S">S</option>
         <option value="M">M</option>
         <option value="L">L</option>
