--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <label for="select-p">
        Polo-shirt Size :
       </label>
-      <select name="select-p" id="select-p">
-        <option value="" hidden required>Select</option>
+      <select name="select-p" id="select-p" required>
+        <option value="" hidden >Select</option>
         <option value="S">S</option>
         <option value="M">M</option>
         <option value="L">L</option>
