--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="box">
-    <form action="https://formspree.io/f/xrgndavl" method="POST" accept-charset="utf-8">
+    <form action="send_mail.php" method="POST" accept-charset="utf-8">
     <div class="center">
       <h1>Shafipur Ideal Public College
       </h1>
